css/screen.css
/* ... */
/*
    Component: Logo
    ---
    Website main logo
*/

.c-logo {
    height: 32px;
}

.c-logo__symbol {
    height: 100%;
}

@media (min-width: 768px) {
    .c-logo {
        height: 40px;
    }
}

/*
    Component: header
    ---
    Main header of the website
*/

.c-header__nav {
    display: none;
}

@media (min-width: 992px) {
    .c-header {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    .c-header__nav {
        display: block;
    }

    .c-header__nav--main {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        margin-top: 12px;
    }
}

/*
    Component: footer
    ---
    Main footer of the website
*/

.c-footer {
    display: flex;
    flex-wrap: wrap;
}

.c-footer__logo {
    width: 100%;
}

.c-footer__nav {
    width: 50%;
}

@media (min-width: 768px) {
    .c-footer {
        justify-content: center;
        align-items: center;
    }

    .c-footer__logo {
        display: flex;
        justify-content: center;
        padding: 0 12px;
    }

    .c-footer__nav {
        width: auto;
        padding: 0 16px;
    }
}

@media (min-width: 992px) {
    .c-footer {
        justify-content: space-between;
    }

    .c-footer__nav {
        padding: 0;
    }

    .c-footer__logo + .c-footer__nav {
        order: -1;
    }

    .c-footer__logo {
        width: auto;
    }

    /*
        Bonus: real centering with CSS
        Checkout: https://css-tricks.com/centering-css-complete-guide/
    */

    /* .c-footer__logo {
        width: auto;
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
    }

    .c-footer__logo .c-logo {
        margin-bottom: 0;
    } */
}

/*
    Component: Nav
    ---
    Main navigation of the site
*/

.c-nav {
    font-size: 18px;
    line-height: 24px;
}

.c-nav--meta {
    font-size: 16px;
}

.c-nav__link {
    text-decoration: none;
    font-weight: 400;
    display: block;
    padding: 8px 0;
}

.c-nav__link,
.c-nav__link:visited,
.c-nav__link:active {
    color: #202024;
}

.c-nav__link--meta,
.c-nav__link--meta:visited,
.c-nav__link--meta:active {
    color: #6C6C75;
}

.c-nav__link:hover,
.c-nav__link:focus {
    color: #5051db;
}

@media (min-width: 768px) {
    .c-nav__list {
        display: flex;
        margin-left: -16px;
        margin-right: -16px;
    }

    .c-nav__link {
        padding: 8px 16px;
    }
}

/*
    Component: Lead
    ---
    Lead type treatments to style everything that differs from standard typography elements
*/

.c-lead {
    font-weight: 200;
}

.c-lead--lg {
    font-size: 20px;
    line-height: 32px;
}

.c-lead--xl {
    font-size: 26px;
    line-height: 32px;
}

.c-lead--xxl {
    font-size: 32px;
    line-height: 40px;
}

.c-lead--xxxl {
    font-size: 36px;
    line-height: 48px;
}

@media (min-width: 768px) {
    .c-lead--lg {
        font-size: 23px;
        line-height: 32px;
    }

    .c-lead--xl {
        font-size: 32px;
        line-height: 40px;
    }

    .c-lead--xxl {
        font-size: 41px;
        line-height: 48px;
    }

    .c-lead--xxxl {
        font-size: 52px;
        line-height: 64px;
    }
}

@media (min-width: 1200px) {
    .c-lead--lg {
        font-size: 26px;
        line-height: 36px;
    }

    .c-lead--xl {
        font-size: 36px;
        line-height: 48px;
    }

    .c-lead--xxl {
        font-size: 52px;
        line-height: 64px;
    }

    .c-lead--xxxl {
        font-size: 66px;
        line-height: 72px;
    }
}

/*
    Component: figure
    ---
    Special type of figure and figcaption
*/

.c-figure {
    position: relative;
}

.c-figure__caption {
    line-height: 15px;
    margin-top: 8px;
    padding-left: 6px;
    padding-top: 1px;
    border: 2px solid #5051DB;
    border-width: 0 0 0 2px;
}

@media (min-width: 768px) {
    .c-figure__caption--absolute {
        position: absolute;
        top: 0;
        right: 0;
        margin-right: 8px;
        text-align: right;
        background-color: #fff;
        padding: 16px;
        max-width: 260px;
        border-width: 0 4px 0 0;
    }
}

/*
    Component: Title icon
    ---
    Special type of title with icon
*/

.c-title-icon {
    display: flex;
    align-items: flex-start;
}

.c-title-icon__icon {
    height: 70px;
    margin-right: 20px;
}

@media (min-width: 768px) {
    .c-title-icon__icon {
        height: 84px;
    }
}

@media (min-width: 1200px) {
    .c-title-icon__icon {
        height: 112px;
    }
}

/*
    Component: CTA link
    ---
    Small cta link with custom animation
*/

.c-link-cta {
    position: relative;
    display: inline-block;
    text-decoration: none;
    font-size: 16px;
    line-height: 24px;
    font-weight: 400;
    padding: 4px 0;
    transition: color .175s ease-in;
}

.c-link-cta,
.c-link-cta:visited,
.c-link-cta:active {
    color: #7373F5;
}

.c-link-cta::after {
    content: "";
    display: block;
    position: absolute;
    bottom: 0;
    left: 0;
    height: 1px;
    width: 100%;
    background-color: #7373F5;
    transform: scaleX(.5);
    transform-origin: left;
    transition-property: transform, background-color;
    transition-duration: .175s;
    transition-timing-function: ease-in;
}

.c-link-cta:hover {
    color: #3E3EA8;
}

.c-link-cta:hover::after {
    transform: scaleX(1);
    background-color: #3E3EA8;
}

/* inversed */

.c-link-cta--inverse,
.c-link-cta--inverse:visited,
.c-link-cta--inverse:active,
.c-link-cta--inverse:hover {
    color: #fff;
}

.c-link-cta--inverse::after,
.c-link-cta--inverse:hover::after {
    background-color: #fff;
}

/*------------------------------------*\
  #UTILITIES
\*------------------------------------*/

/*
    Utilities: color
    ---
    Utility classes to put specific colors onto elements
*/

.u-color-primary-light {
    color: #7373F5;
}

.u-color-primary-base {
    color: #5051DB;
}

.u-color-primary-dark {
    color: #3E3EA8;
}
/* ... */

